# equirect2cubemap

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  math.rs
