[package]
name = "equirect2cubemap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
image = { version = "0.25" }
rayon = "1.8.0"

[profile.release]
panic = "abort"
strip = true
lto = true
